[collector]fix cannot find symbol class BASE64Decoder